# MathCurves

./: .gitignore  .gitmodules  CMakeLists.txt  Math_Curves.icns  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderarea.cpp  renderarea.h
MathCurves.app/Contents/MacOS/: Math_Curves
Math_Curves.app/Contents/: Info.plist
